# aka

./: README.md  internal-execution-model.md  isa-specification.md  language-specification.md  prelude.fth  pyproject.toml  timing-model.md  translator-design.md
.github/workflows/: ci.yml
forth_acc/: cli.py  isa.py  machine.py  translator.py
forth_acc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_golden.py  test_machine.py  test_translator.py
