[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forth_acc"
version = "0.1.0"
description = "Forth-ACC processor: translator and simulator"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
translator = "forth_acc.cli:translate_main"
machine    = "forth_acc.cli:simulate_main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
